--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.1.2",
+    "@craco/craco": "^6.4.0",
     "@emotion/react": "^11.4.0",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.3.0",
@@ -13,17 +13,20 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.9",
     "@types/react-addons-css-transition-group": "^15.0.6",
     "@types/react-cookies": "^0.1.0",
-    "@types/react-dom": "^17.0.5",
+    "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-svg": "^5.0.0",
     "@types/react-syntax-highlighter": "^13.5.2",
     "@types/react-transition-group": "^4.4.2",
     "@welldone-software/why-did-you-render": "^6.1.2",
-    "antd": "^4.15.6",
+    "antd": "^4.16.13",
     "browserslist": "^4.17.3",
     "copy-to-clipboard": "^3.3.1",
+    "craco-antd": "^1.19.0",
     "craco-less": "^1.17.1",
     "dayjs": "^1.10.4",
     "file-loader": "^6.2.0",
@@ -53,7 +56,7 @@
     "remark-math": "^5.1.0",
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^7.1.1",
-    "typescript": "^4.2.4",
+    "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -88,7 +91,7 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@types/qs": "^6.9.6",
-    "@types/react": "^17.0.5",
+    "@types/react": "^17.0.35",
     "@types/react-redux": "^7.1.16",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
