--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.3",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "^16.11.9",
     "@types/react-addons-css-transition-group": "^15.0.6",
     "@types/react-cookies": "^0.1.0",
@@ -24,6 +25,7 @@
     "@types/react-transition-group": "^4.4.2",
     "@welldone-software/why-did-you-render": "^6.1.2",
     "antd": "^4.16.13",
+    "braft-editor": "^2.3.9",
     "browserslist": "^4.17.3",
     "copy-to-clipboard": "^3.3.1",
     "craco-antd": "^1.19.0",
@@ -40,19 +42,18 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-inlinesvg": "^2.3.0",
-    "react-markdown": "^7.0.1",
+    "react-markdown": "^7.1.1",
     "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-svg": "^13.0.6",
-    "react-syntax-highlighter": "^15.4.4",
+    "react-syntax-highlighter": "^15.4.5",
     "react-transition-group": "^4.4.2",
-    "react-uuid": "^1.0.2",
     "redux-thunk": "^2.3.0",
-    "rehype-katex": "^6.0.1",
-    "remark-gfm": "^2.0.0",
+    "rehype-katex": "^6.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.0",
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^7.1.1",
