--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nanoid": "^3.1.25",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
